nginx/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx
  labels:
    app: webservice
---
