nginx/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  labels:
    app: webservice
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webservice
  template:
    metadata:
      labels:
        app: webservice
    spec:
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: pvc-basic-csi-nas1
      containers:
      - name: nginx
        image: "nginx"
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 50Mi
        ports:
          - containerPort:  80
            name:  "http"
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: vol
      restartPolicy: Always
---
