nginx/test.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: testpod
  name: testpod
  namespace: test
spec:
  containers:
  - image: busybox
    name: testpod
    command: ["/bin/sh"]
    args: ["-c", "while true; do echo 'salida al colector'; sleep 10;done"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
