nginx/nuevo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: mynamespace
spec:
  ingressClassName: nginx
  rules:
  - host: mynamespace-192-168-3-230.traefik.me
    http:
      paths:
      - backend:
          service:
            name: myapp-1
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mynamespace-192-168-3-230.traefik.me
    secretName: nginx-nginx-tls
status:
  loadBalancer:
    ingress:
    - ip: 192.168.3.225
    - ip: 192.168.3.226
    - ip: 192.168.3.227
    - ip: 192.168.3.228
